# docker-images

./: .gitignore  README.md  docker-compose.yml
cv-cdev/: dockerfile
cv-pyc-dev/: dockerfile
debian-cdev/: dockerfile
libtorch-cdev/: .dockerignore  dockerfile  make_n_run.sh
libtorch-cdev/example/: CMakeLists.txt  example.cpp  example.sh  make_n_run.sh
opencv-cdev/: dockerfile
opencv-cdev/example/: CMakeLists.txt  example.cpp  example.sh  make_n_run.sh
tesseract-cdev/: dockerfile
tesseract-cdev/example/: CMakeLists.txt  example.cpp  example.sh  make_n_run.sh
